<resources>
    <string name="app_name">listo</string>
    <string name="btnEdit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="listo_slogan">shopping listo™</string>
    <string name="edit">Edit</string>
    <string name="title_of_item">Title of Item</string>
    <string name="date">Date</string>
    <string name="cbPurchased">Purchased</string>
    <string name="dialogTitle">Save item</string>
    <string name="purchased">Purchased</string>
    <string name="title">Title</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="saveItem">Save Item</string>
    <string name="error">SOMETHING</string>
    <string name="error_wrong_interface">The Activity does not implement the ItemHandler interface</string>
    <string name="null_error">required field</string>
    <string name="description_of_item">Description</string>
    <string name="Add">Add</string>
    <string name="getInspiration">Get Inspiration</string>
</resources>
