<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingBottom="@dimen/row_padding_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_padding_vertical"
    android:weightSum="10">


    <CheckBox
        android:id="@+id/cbPurchased"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/title_of_item"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivCategory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cropToPadding="true"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvEstimatedPrice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/estimated_price"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/tvTitle"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/description_of_item"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/tvDescription"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/date"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="9sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/edit"
        android:textAlignment="center"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="10sp" />


</LinearLayout>